fixed alignment

--- a/src/InfoGoal/KickerBundle/Resources/public/scss/Table/table-game.scss
+++ b/src/InfoGoal/KickerBundle/Resources/public/scss/Table/table-game.scss
@@ -5,11 +5,14 @@
 }
 
 #team-0, #team-1 {
-    position: absolute;
-    top: 18%;
+  position: absolute;
+  top: 18%;
   .row {
     float: none;
     margin: 0 auto;
+    &:first-child {
+      margin-bottom: 35%;
+    }
   }
   @media (max-width: 768px) {
     top: 16%;
@@ -19,10 +22,6 @@
   }
   @media (min-width: 992px) {
     top: 20%;
-
-    .row:first-child {
-      margin-bottom: 35%;
-    }
   }
 }
 
@@ -67,10 +66,17 @@
     font-size: 28px;
     margin: 0 auto;
     background-color: rgba(97, 196, 131, 1);
+    @media (max-width: 768px) {
+      width: 60%;
+      font-size: 12px;
+    }
+    @media (max-width: 992px) and (min-width: 768px) {
+      width: 40%;
+      font-size: 16px;
+    }
     @media (min-width: 992px) {
-      width: 80%;
+      width: 60%;
       font-size: 18px;
-      margin: 0 auto;
     }
   }
 }
